[package]
name = "fixed_deque"
version = "1.2.0"
edition = "2021"
description = "A fixed size VecDeque to match Python Deque"
authors = ["Akseli Lukkarila <akseli.lukkarila@nitor.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Esgrove/fixed_deque"
documentation = "https://docs.rs/fixed_deque/"
keywords = ["deque", "vecdeque"]
categories = ["data-structures"]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
